--- a/capitulo.html
+++ b/capitulo.html
@@ -40,7 +40,7 @@
             
 <p>Explora el capítulo "El futuro de la muerte" del libro "Irremplazables".</p>
             
-<img src="images/irremplazables.jpeg">
+<img src="images/IMG_8697">
    
 <p style="max-width: 800px; margin: 0 auto;background-color: #FFD180; padding: 20px; border-radius: 8px;">Habla sobre como van en aumento los avances tecnológicos de la humanidad en base a la medicina la cual posteriormente curaria enfermedades mortales como lo es el CANCER,SIDA O ARTRITIS REUMATOIDE entre otros.
 La muerte es algo inevitable que todos vamos a pasar algún día, y es importante saber que eso va a pasar y no hay forma de remediarlo, es parte de la vida, ya sea que mueramos de manera natural o en cualquier tipo de accidente</p>  
