--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <body>
     <div class="container">
         <h1>Irremplazables</h1>
-        <img src="imagen_del_libro.jpg" alt="Irremplazables">
+        <img src="https://raw.githubusercontent.com/Magtrs/Irreemplazables-/main/IMG_8697.webp" alt="Irremplazables">
         <table class="chapter-table">
             <tr>
                 <td onclick="showChapter('capitulo1')">Capítulo 1</td>
