--- a/capitulo.html
+++ b/capitulo.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -42,9 +42,9 @@
             
 <img src="https://raw.githubusercontent.com/Magtrs/Irreemplazables-/main/IMG_8697.webp" width="200" height="300">
    
-<p style="max-width: 800px; margin: 0 auto;background-color: #FFD180; padding: 20px; border-radius: 8px;">Habla sobre como van en aumento los avances tecnológicos de la humanidad en base a la medicina la cual posteriormente curaria enfermedades mortales como lo es el CANCER,SIDA O ARTRITIS REUMATOIDE entre otros.
+<p style="max-width: 800px; margin: 0 auto;background-color: #FFD180; padding: 20px; border-radius: 4px;">Habla sobre como van en aumento los avances tecnológicos de la humanidad en base a la medicina la cual posteriormente curaria enfermedades mortales como lo es el CANCER,SIDA O ARTRITIS REUMATOIDE entre otros.
 La muerte es algo inevitable que todos vamos a pasar algún día, y es importante saber que eso va a pasar y no hay forma de remediarlo, es parte de la vida, ya sea que mueramos de manera natural o en cualquier tipo de accidente</p>  
-<p style="max-width: 800px; margin: 0 auto;background-color: #FFD180; padding: 20px; border-radius: 8px;">Solo cuando una persona decida que ya es suficiente y no tenga motivos para continuar siendo su elección propia, aunque en temas de religión se ve afectado, terminará siendo aceptable.</p>
+<p style="max-width: 800px; margin: 0 auto;background-color: #FFD180; padding: 20px; border-radius: 4px;">Solo cuando una persona decida que ya es suficiente y no tenga motivos para continuar siendo su elección propia, aunque en temas de religión se ve afectado, terminará siendo aceptable.</p>
 <p style="max-width: 800px; margin: 0 auto;background-color: #FFD180; padding: 20px; border-radius: 8px;">Ya la muerte no será un tema de dinero, drama o miedo sino , que se tendrá la opción de la INMORTALIDAD DIGITAL pasando recuerdos y voz misma a una máquina para seguir existiendo aunque serán conciderados lo primeros "zombies" ya que ablarias con "alguien" que ya no está en este mundo</p>
 <p style="max-width: 800px; margin: 0 auto;background-color: #FFD180; padding: 20px; border-radius: 8px;">La vida es un lapso en el tiempo que se debe aprovechar en cada segundo que pasa. La muerte es algo inevitable que todos vamos a pasar algún día, y es importante saber que eso va a pasar y no hay forma de remediarlo. Sebastián Tonda plantea en este capítulo que, incluso la muerte evolucionará en algún futuro ¿Pero eso es posible?. El plantea que la muerte evolucionará teniendo un papel importante en el futuro como una salida del sufrimiento de una manera asistida, mejor dicho, que alguien intervenga para acelerar el proceso de muerte de una persona esto según "ayudando" a evitar el sufrimiento del paciente. Esto significa que incluso la misma muerte no será un proceso del todo natural, eso da a entender que, ¿Ya nada será algo normal en el futuro? , pues ahora varios procesos naturales como el de alimentarte será manipulado por la tecnología.</p>
 <p style="max-width: 800px; margin: 0 auto;background-color: #FFD180; padding: 20px; border-radius: 8px;">Habla sobre como van en aumento los avances tecnológicos de la humanidad en base a la medicina la cual posteriormente curaria enfermedades mortales como lo es el CANCER,SIDA O ARTRITIS REUMATOIDE entre otros.</p>
